--- a/Sample.vcxproj.filters
+++ b/Sample.vcxproj.filters
@@ -21,10 +21,20 @@
     <ClCompile Include="final_project.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="utils.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="glslprogram.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="utils.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="final_project_assets\river.frag" />
+    <None Include="final_project_assets\river.vert" />
   </ItemGroup>
 </Project>
