Remove glm dependency from project
Previously included glm from an outside directory. Glm isn't currently
used in the project, plus there's already a copy of glm in the project
directory so there's no need to include from an outside source.

--- a/Sample.vcxproj
+++ b/Sample.vcxproj
@@ -69,7 +69,8 @@
       <WarningLevel>Level3</WarningLevel>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
-      <AdditionalIncludeDirectories>C:\Users\pendl\Downloads\glm-0.9.9.7\glm;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>
+      </AdditionalIncludeDirectories>
     </ClCompile>
     <ResourceCompile>
       <PreprocessorDefinitions>_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
